--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <h1>To-Do List</h1>
     <form id="add-todos">
       <label for="new-todo">What do you want to do?</label>
-      <input id="new-todo" type="text" autofocus>
-      <button type="submit">Add To-Do</button>
+      <div class="flex">
+        <input id="new-todo" type="text" autofocus>
+        <button type="submit">Add To-Do</button>
+      </div>
     </form>
     <div id="app"></div>
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/reef@4/dist/reef.min.js"></script>
