--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A simple to-do list app written in vanilla JS and built with state-based UI.">
-    <title>To-Do List</title>
+    <title>To-Do Lists</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
-    <h1>To-Do List</h1>
+    <h1>To-Do Lists</h1>
     <div id="app"></div>
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/reef@4/dist/reef.min.js"></script>
     <script src="assets/js/app.js"></script>
